# fido-ssh-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.cargo/: config.toml
src/: agent.rs  cache.rs  ctap.rs  log.rs  main.rs  pin.rs  proto.rs  sk_sig.rs  udev.rs  upstream.rs
systemd/: fido-ssh-agent.service  fido-ssh-agent.socket
