[package]
name = "fido-ssh-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ssh-agent-lib = "0.5"
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "io-util"] }
anyhow = "1"
ctap-hid-fido2 = "3.5"
secrecy = "0.10"
udev = "0.9"
libc = "0.2"
sd-notify = "0.5"

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
