[package]
name = "fido-ssh-agent"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "io-util"] }
anyhow = "1"
ctap-hid-fido2 = "3.5"
secrecy = "0.10"
tokio-udev = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
sd-notify = "0.5"
libc = "0.2"

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
